<?xml version="1.0"?>
<package>
  <name>octomap_msgs</name>
  <version>0.0.0</version>
  <description>This package simply clones and installs octomap_msgs: http://wiki.ros.org/octomap_msgs</description>

  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
